# Funkfragenhelfer

./: Cargo.toml  README.md  raw_json_to_ffh_json.py
config/: config.json
learning/: learning.json
questions/: questions.json
resources/: ffh_questions.json
resources/fragenkatalog/: README.txt  fragenkatalog.json  test.json
src/: config.rs  gui.rs  helper.rs  learning.rs  main.rs  question.rs
